--- a/src/App.css
+++ b/src/App.css
@@ -6,12 +6,18 @@
 
 body {
   width: 100vw;
-  min-height: 100vh;
+  height: 100vh;
   text-align: center;
   font-size: calc(10px + 2vmin);
 }
 
 #root {
   width: 100%;
-  height: 100%;
+  height: 100vh;
+}
+
+html,
+body {
+  margin: 0;
+  padding: 0;
 }
